--- a/main.css
+++ b/main.css
@@ -43,16 +43,16 @@
 #update-window {
   background: linear-gradient(
     135deg,
-    var(--surface) 0%,
-    var(--surface) 1%,
+    var(--primary) 0%,
+    var(--primary) 1%,
     var(--shadow) 1%,
     var(--shadow) 2%,
-    var(--surface) 2%,
-    var(--surface) 3%,
+    var(--outline) 2%,
+    var(--outline) 3%,
     var(--shadow) 3%,
     var(--shadow) 4%,
-    var(--surface) 4%,
-    var(--surface) 5%,
+    var(--surface-bright) 4%,
+    var(--surface-bright) 5%,
     var(--shadow) 5%,
     var(--shadow) 6%,
     var(--surface) 6%,
@@ -64,29 +64,31 @@
     var(--surface) 94%,
     var(--shadow) 94%,
     var(--shadow) 95%,
-    var(--surface) 95%,
-    var(--surface) 96%,
+    var(--surface-bright) 95%,
+    var(--surface-bright) 96%,
     var(--shadow) 96%,
     var(--shadow) 97%,
-    var(--surface) 97%,
-    var(--surface) 98%,
+    var(--outline) 97%,
+    var(--outline) 98%,
     var(--shadow) 98%,
     var(--shadow) 99%,
-    var(--surface) 99%,
-    var(--surface) 100%
+    var(--primary) 99%,
+    var(--primary) 100%
   );
   border-radius: 0;
 }
 
 #update-button {
   background-color: var(--primary);
-  border-radius: 8px;
-  padding: 8px;
+  border-radius: 16px;
+  padding: 8px 16px;
   font-weight: bold;
+  transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 #update-button:hover {
   background-color: var(--foreground);
+  border-radius: 8px;
 }
 
 #update-button:active {
@@ -99,13 +101,15 @@
 
 #later-button {
   background-color: var(--surface-bright);
-  border-radius: 8px;
-  padding: 8px;
+  border-radius: 16px;
+  padding: 8px 16px;
   font-weight: bold;
+  transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 #later-button:hover {
   background-color: var(--outline);
+  border-radius: 8px;
 }
 
 #later-button:active {
