--- a/styles/controls.css
+++ b/styles/controls.css
@@ -4,6 +4,10 @@
   border-radius: 2px 10px 10px 2px;
 }
 
+#control-slider.no-icon {
+  border-radius: 10px;
+}
+
 #control-slider trough {
   min-height: 32px;
   padding-right: 4px;
@@ -16,6 +20,10 @@
   margin-right: 8px;
   background-color: var(--primary);
   transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+#control-slider.no-icon trough highlight {
+  border-radius: 10px 2px 2px 10px;
 }
 
 #control-slider.muted trough highlight,
