fix: Bug caused NetworkApplet to freeze
fix: wifi list not available when starting Ax-shell without a conection

fix: wifi list does not show duplicate ssids anymore (mesh networks

feat: wifi disconnection

--- a/styles/applets.css
+++ b/styles/applets.css
@@ -66,7 +66,12 @@
   background-color: var(--green);
 }
 
-#wifi-connect-button.connected label {
+#wifi-connect-button.disconnected {
+  background-color: var(--red);
+}
+
+#wifi-connect-button.connected label,
+#wifi-connect-button.disconnected label {
   color: var(--shadow);
 }
 
