--- a/styles/applets.css
+++ b/styles/applets.css
@@ -66,12 +66,7 @@
   background-color: var(--green);
 }
 
-#wifi-connect-button.disconnected {
-  background-color: var(--red);
-}
-
-#wifi-connect-button.connected label,
-#wifi-connect-button.disconnected label {
+#wifi-connect-button.connected label {
   color: var(--shadow);
 }
 
